--- a/api/package.json
+++ b/api/package.json
@@ -25,6 +25,7 @@
     "http-status-codes": "^1.4.0",
     "module-alias": "^2.2.2",
     "morgan": "^1.10.0",
+    "short-unique-id": "^3.0.0",
     "uuid4": "^1.1.4",
     "winston": "^3.2.1"
   },
