--- a/api/env/production.env
+++ b/api/env/production.env
@@ -2,5 +2,8 @@
 NODE_ENV=production
 
 # Server
-PORT=8081
-HOST=
+PORT=9000
+HOST=localhost
+TRUST_PROXY=loopback
+
+UI_URL=https://justone.okj.name
