--- a/api/package.json
+++ b/api/package.json
@@ -25,7 +25,7 @@
     "http-status-codes": "^1.4.0",
     "module-alias": "^2.2.2",
     "morgan": "^1.10.0",
-    "short-unique-id": "^3.0.0",
+    "shortid": "^2.2.15",
     "uuid4": "^1.1.4",
     "winston": "^3.2.1"
   },
@@ -39,6 +39,7 @@
     "@types/jsonfile": "^6.0.0",
     "@types/morgan": "^1.9.0",
     "@types/node": "^14.0.1",
+    "@types/shortid": "0.0.29",
     "@types/supertest": "^2.0.9",
     "find": "^0.3.0",
     "fs-extra": "^9.0.0",
