--- a/ui/package.json
+++ b/ui/package.json
@@ -14,12 +14,13 @@
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
+    "@types/shortid": "0.0.29",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "short-unique-id": "^3.0.0",
+    "shortid": "^2.2.15",
     "typescript": "^3.7.5"
   },
   "scripts": {
