Mongoose database implemented

--- a/api/env/development.env
+++ b/api/env/development.env
@@ -6,3 +6,6 @@ PORT=9000
 HOST=localhost
 
 UI_URL=http://localhost:3000,http://0.0.0.0:3000
+
+# Database
+DB_CONNSTR=mongodb://localhost/boardgameapp
