--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,8 @@
     "helmet": "^3.22.0",
     "http-status-codes": "^1.4.0",
     "module-alias": "^2.2.2",
+    "mongodb": "^3.5.7",
+    "mongoose": "^5.9.14",
     "morgan": "^1.10.0",
     "shortid": "^2.2.15",
     "uuid4": "^1.1.4",
@@ -37,6 +39,8 @@
     "@types/helmet": "0.0.47",
     "@types/jasmine": "^3.5.10",
     "@types/jsonfile": "^6.0.0",
+    "@types/mongodb": "^3.5.17",
+    "@types/mongoose": "^5.7.20",
     "@types/morgan": "^1.9.0",
     "@types/node": "^14.0.1",
     "@types/shortid": "0.0.29",
