--- a/api/.env.production
+++ b/api/.env.production
@@ -10,3 +10,7 @@ UI_URL=https://justone.okj.name
 
 # Database
 DB_CONNSTR=mongodb://localhost/boardgameapp
+
+# Key for signed cookies
+# head -c57 /dev/urandom | base64
+COOKIE_SECRET=# !!FILLME!!
