--- a/api/package.json
+++ b/api/package.json
@@ -15,10 +15,13 @@
     "@server": "dist/Server"
   },
   "dependencies": {
+    "@types/cookies": "^0.7.4",
     "command-line-args": "^5.1.1",
     "cookie-parser": "^1.4.5",
+    "cookies": "^0.8.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "dotenv-defaults": "^1.1.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "helmet": "^3.22.0",
