Refactoring: restructure folders, and resuse game interface

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -24,6 +24,12 @@
       ],
       "@server": [
         "src/Server"
+      ],
+      "@gameTypes": [
+        "../ui/src/types"
+      ],
+      "@gameFunctions": [
+        "../ui/src/one-word/gameFunctions"
       ]
     },
     "types": [
