Refactoring: save all rounds in model

--- a/api/env/development.env
+++ b/api/env/development.env
@@ -5,7 +5,7 @@ NODE_ENV=development
 PORT=9000
 HOST=localhost
 
-UI_URL=http://localhost:3000,http://0.0.0.0:3000
+UI_URL=http://localhost:3000,http://localhost:9000,http://0.0.0.0:3000,http://0.0.0.0:9000
 
 # Database
 DB_CONNSTR=mongodb://localhost/boardgameapp
