--- a/ui/package.json
+++ b/ui/package.json
@@ -9,12 +9,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/canvas-confetti": "^1.0.0",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.39",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/shortid": "0.0.29",
+    "canvas-confetti": "^1.2.0",
     "cross-env": "^7.0.2",
     "i18next": "^19.4.4",
     "i18next-browser-languagedetector": "^4.2.0",
