--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
     "@gameFunctions": "dist/ui/src/one-word/gameFunctions"
   },
   "dependencies": {
+    "@types/socket.io": "^2.1.8",
     "command-line-args": "^5.1.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -29,6 +30,7 @@
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.14",
     "morgan": "^1.10.0",
+    "socket.io": "^2.3.0",
     "uuid4": "^1.1.4",
     "winston": "^3.2.1"
   },
