--- a/ui/package.json
+++ b/ui/package.json
@@ -10,14 +10,17 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/canvas-confetti": "^1.0.0",
+    "@types/http-proxy-middleware": "^0.19.3",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.39",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/shortid": "0.0.29",
+    "@types/socket.io-client": "^1.4.33",
     "canvas-confetti": "^1.2.0",
     "cross-env": "^7.0.2",
+    "http-proxy-middleware": "^1.0.4",
     "i18next": "^19.4.4",
     "i18next-browser-languagedetector": "^4.2.0",
     "i18next-http-backend": "^1.0.12",
@@ -29,6 +32,7 @@
     "react-joyride": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "socket.io-client": "^2.3.0",
     "typescript": "^3.7.5"
   },
   "scripts": {
@@ -51,6 +55,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:9000"
+  }
 }
