--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -11,6 +11,11 @@
     "sourceMap": true,
     "strict": true,
     "target": "es6",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "moduleResolution": "node",
     "paths": {
       "@daos/*": [
