--- a/ui/package.json
+++ b/ui/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/canvas-confetti": "^1.0.0",
+    "@types/fast-levenshtein": "0.0.1",
     "@types/http-proxy-middleware": "^0.19.3",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.39",
@@ -20,6 +21,7 @@
     "@types/socket.io-client": "^1.4.33",
     "canvas-confetti": "^1.2.0",
     "cross-env": "^7.0.2",
+    "fast-levenshtein": "^2.0.6",
     "http-proxy-middleware": "^1.0.4",
     "i18next": "^19.4.4",
     "i18next-browser-languagedetector": "^4.2.0",
