--- a/ui/package.json
+++ b/ui/package.json
@@ -6,7 +6,7 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
-    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/canvas-confetti": "^1.4.2",
@@ -26,14 +26,14 @@
     "i18next": "^19.9.2",
     "i18next-browser-languagedetector": "^4.3.1",
     "i18next-http-backend": "^1.3.1",
-    "node-sass": "^4.14.1",
+    "node-sass": "^6.0.0",
     "notistack": "^0.9.17",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-i18next": "^11.15.1",
     "react-joyride": "^2.3.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^4.0.3",
     "socket.io-client": "^2.4.0",
     "typescript": "^3.9.10"
   },
