--- a/ui/package.json
+++ b/ui/package.json
@@ -6,41 +6,38 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/canvas-confetti": "^1.4.2",
-    "@types/fast-levenshtein": "0.0.1",
-    "@types/http-proxy-middleware": "^0.19.3",
-    "@types/jest": "^24.9.1",
-    "@types/node": "^12.20.37",
-    "@types/react": "^16.14.21",
-    "@types/react-dom": "^16.9.14",
-    "@types/react-router-dom": "^5.3.2",
-    "@types/shortid": "0.0.29",
-    "@types/socket.io-client": "^1.4.36",
     "canvas-confetti": "^1.4.0",
-    "cross-env": "^7.0.3",
     "fast-levenshtein": "^2.0.6",
-    "http-proxy-middleware": "^1.3.1",
     "i18next": "^19.9.2",
     "i18next-browser-languagedetector": "^4.3.1",
     "i18next-http-backend": "^1.3.1",
-    "node-sass": "^6.0.0",
     "notistack": "^0.9.17",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-i18next": "^11.15.1",
     "react-joyride": "^2.3.2",
     "react-router-dom": "^5.3.0",
+    "socket.io-client": "^2.4.0"
+  },
+  "devDependencies": {
+    "@types/canvas-confetti": "^1.4.2",
+    "@types/fast-levenshtein": "0.0.1",
+    "@types/http-proxy-middleware": "^0.19.3",
+    "@types/node": "^12.20.37",
+    "@types/react": "^16.14.21",
+    "@types/react-dom": "^16.9.14",
+    "@types/react-router-dom": "^5.3.2",
+    "@types/shortid": "0.0.29",
+    "@types/socket.io-client": "^1.4.36",
+    "cross-env": "^7.0.3",
+    "http-proxy-middleware": "^1.3.1",
+    "node-sass": "^6.0.0",
     "react-scripts": "^4.0.3",
-    "socket.io-client": "^2.4.0",
     "typescript": "^3.9.10"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "cross-env GENERATE_SOURCEMAP=false react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
