--- a/api/package.json
+++ b/api/package.json
@@ -2,9 +2,9 @@
   "name": "boardgame_api",
   "version": "0.0.0",
   "scripts": {
-    "build": "node ./util/build.js",
+    "build": "webpack",
     "lint": "tslint --project \"tsconfig.json\"",
-    "start": "node -r module-alias/register ./dist/api/src",
+    "start": "node ./dist/main.js",
     "start:dev": "nodemon --config nodemon.json",
     "test": "nodemon --config nodemon.test.json"
   },
@@ -17,6 +17,7 @@
     "@gameFunctions": "dist/ui/src/one-word/gameFunctions"
   },
   "dependencies": {
+    "@tsconfig/node16": "^1.0.2",
     "command-line-args": "^5.2.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -39,27 +40,35 @@
     "@types/command-line-args": "^5.2.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
+    "@types/fast-levenshtein": "0.0.1",
     "@types/find": "^0.2.1",
     "@types/helmet": "0.0.47",
     "@types/jasmine": "^3.10.2",
     "@types/jsonfile": "^6.0.1",
-    "@types/fast-levenshtein": "0.0.1",
-    "@types/socket.io": "^2.1.13",
     "@types/mongodb": "^3.6.20",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
     "@types/node": "^14.18.1",
     "@types/shortid": "0.0.29",
+    "@types/socket.io": "^2.1.13",
     "@types/supertest": "^2.0.11",
+    "bufferutil": "^4.0.5",
+    "copy-webpack-plugin": "^10.2.0",
+    "csv-loader": "^3.0.3",
     "find": "^0.3.0",
     "fs-extra": "^9.1.0",
     "jasmine": "^3.10.0",
     "jsonfile": "^6.1.0",
     "nodemon": "^2.0.15",
     "supertest": "^4.0.2",
+    "ts-loader": "^9.2.6",
     "ts-node": "^8.10.2",
     "tsconfig-paths": "^3.12.0",
+    "tsconfig-paths-webpack-plugin": "^3.5.2",
     "tslint": "^6.1.3",
-    "typescript": "^3.9.10"
+    "typescript": "^4.5.4",
+    "utf-8-validate": "^5.0.7",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1"
   }
 }
