--- a/api/package.json
+++ b/api/package.json
@@ -32,6 +32,7 @@
     "mongodb": "^3.7.3",
     "mongoose": "^5.13.13",
     "morgan": "^1.10.0",
+    "openai": "^3.2.1",
     "socket.io": "^2.4.1",
     "uuid4": "^1.1.4",
     "winston": "^3.3.3"
