--- a/api/package.json
+++ b/api/package.json
@@ -17,25 +17,25 @@
     "@gameFunctions": "dist/ui/src/one-word/gameFunctions"
   },
   "dependencies": {
-    "@tsconfig/node16": "^1.0.2",
-    "command-line-args": "^5.2.0",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "csv-parser": "^2.3.5",
-    "dotenv": "^8.6.0",
-    "express": "^4.17.2",
-    "express-async-errors": "^3.1.1",
-    "fast-levenshtein": "^2.0.6",
-    "helmet": "^3.23.3",
-    "http-status-codes": "^1.4.0",
-    "module-alias": "^2.2.2",
-    "mongodb": "^3.7.3",
-    "mongoose": "^5.13.13",
-    "morgan": "^1.10.0",
-    "openai": "^3.2.1",
-    "socket.io": "^2.4.1",
-    "uuid4": "^1.1.4",
-    "winston": "^3.3.3"
+    "@tsconfig/node16": "1.0.2",
+    "command-line-args": "5.2.0",
+    "cookie-parser": "1.4.6",
+    "cors": "2.8.5",
+    "csv-parser": "2.3.5",
+    "dotenv": "8.6.0",
+    "express": "4.17.2",
+    "express-async-errors": "3.1.1",
+    "fast-levenshtein": "2.0.6",
+    "helmet": "3.23.3",
+    "http-status-codes": "1.4.0",
+    "module-alias": "2.2.2",
+    "mongodb": "3.7.3",
+    "mongoose": "5.13.13",
+    "morgan": "1.10.0",
+    "openai": "3.2.1",
+    "socket.io": "2.4.1",
+    "uuid4": "1.1.4",
+    "winston": "3.3.3"
   },
   "devDependencies": {
     "@types/command-line-args": "^5.2.0",
