--- a/ui/package.json
+++ b/ui/package.json
@@ -3,21 +3,21 @@
   "version": "1.0.1",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.60",
-    "canvas-confetti": "^1.4.0",
-    "fast-levenshtein": "^2.0.6",
-    "i18next": "^19.9.2",
-    "i18next-browser-languagedetector": "^4.3.1",
-    "i18next-http-backend": "^1.3.1",
-    "notistack": "^0.9.17",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-i18next": "^11.15.1",
-    "react-joyride": "^2.3.2",
-    "react-router-dom": "^5.3.0",
-    "socket.io-client": "^2.4.0"
+    "@material-ui/core": "4.12.3",
+    "@material-ui/icons": "4.11.2",
+    "@material-ui/lab": "4.0.0-alpha.60",
+    "canvas-confetti": "1.4.0",
+    "fast-levenshtein": "2.0.6",
+    "i18next": "19.9.2",
+    "i18next-browser-languagedetector": "4.3.1",
+    "i18next-http-backend": "1.3.1",
+    "notistack": "0.9.17",
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
+    "react-i18next": "11.15.1",
+    "react-joyride": "2.3.2",
+    "react-router-dom": "5.3.0",
+    "socket.io-client": "2.4.0"
   },
   "devDependencies": {
     "@types/canvas-confetti": "^1.4.2",
@@ -31,8 +31,8 @@
     "@types/socket.io-client": "^1.4.36",
     "cross-env": "^7.0.3",
     "http-proxy-middleware": "^1.3.1",
-    "node-sass": "^6.0.0",
     "react-scripts": "^4.0.3",
+    "sass": "^1.77.6",
     "typescript": "^3.9.10"
   },
   "scripts": {
